--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -18,6 +18,13 @@
         android:padding="12dp"
         android:textSize="20sp" />
 
+    <TextView
+        android:id="@+id/for_date"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="12dp"
+        android:textSize="20sp" />
+
     <Button
         android:id="@+id/deleteBtn"
         android:layout_width="wrap_content"
